--- a/KMeans.Gui/Windows/MainWindow.xaml
+++ b/KMeans.Gui/Windows/MainWindow.xaml
@@ -1,8 +1,9 @@
-﻿<Window x:Class="KMeans.Gui.Windows.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:ViewModels="clr-namespace:KMeans.Gui.ViewModels" x:Class="KMeans.Gui.Windows.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" MinHeight="200" MinWidth="300">
   <DockPanel LastChildFill="True">
@@ -14,15 +15,15 @@
         <MenuItem Header="Exit" Click="ExitMenuItemClick"/>
       </MenuItem>
     </Menu>
-    <StatusBar Name="StatusBar" DockPanel.Dock="Bottom">
+    <StatusBar x:Name="StatusBar" DockPanel.Dock="Bottom">
       <StatusBarItem>
-        <TextBlock Name="CursorPosition" Text="{Binding MousePosition}"/>
+        <TextBlock x:Name="CursorPosition" Text="{Binding PositionText}"/>
       </StatusBarItem>
       <Separator/>
-      <StatusBarItem>
-        <TextBlock Name="StatusInfo" Text="{Binding StatusText}" />
+      <StatusBarItem DataContext="">
+        <TextBlock x:Name="StatusInfo" Text="{Binding StatusText}"/>
       </StatusBarItem>
     </StatusBar>
-    <Canvas Name="DrawingCanvas"  DockPanel.Dock="Bottom" MouseEnter="DrawingCanvasOnMouseEnter" MouseLeave="DrawingCanvasOnMouseLeave" MouseMove="DrawingCanvasOnMouseMove" Background="Gray"/>
+    <Canvas x:Name="DrawingCanvas"  DockPanel.Dock="Bottom" MouseEnter="DrawingCanvasOnMouseEnter" MouseLeave="DrawingCanvasOnMouseLeave" MouseMove="DrawingCanvasOnMouseMove" Background="WhiteSmoke" MouseDown="DrawingCanvasOnMouseDown" MouseUp="DrawingCanvasOnMouseUp"/>
   </DockPanel>
 </Window>
